首页 + 产品页 - init commit

--- a/index.html
+++ b/index.html
@@ -31,12 +31,7 @@
 <!-- head -->
 <header class="global-header">
 
-    <div class="topbar">
-        <div class="pull-right">
-
-        </div>
-    </div>
-
+    <!-- logo & 导航 -->
     <nav class="navbar navbar-default"><!-- navbar-fixed-top -->
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -49,7 +44,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="javascript:">
-                    <img src="images/logo.png" alt="insist">
+                    <img src="images/logo.png" alt="INSIST" class="img-responsive">
                 </a>
             </div>
 
@@ -75,18 +70,18 @@
                     </div>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="javascript:">首页</a></li>
+                    <li class="active"><a href="index.html">首页</a></li>
                     <li class="dropdown">
                         <a href="javascript:" class="dropdown-toggle" data-toggle="dropdown" role="button"
                            aria-haspopup="true" aria-expanded="false"><span class="layout-vam">产品 </span><span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="javascript:">键盘</a></li>
-                            <li><a href="javascript:">鼠标</a></li>
-                            <li><a href="javascript:">鼠标垫</a></li>
-                            <li><a href="javascript:">护目镜</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="javascript:">附件</a></li>
-                            <li><a href="javascript:">其他</a></li>
+                            <li><a href="product.html">键盘</a></li>
+                            <li><a href="product.html">鼠标</a></li>
+                            <li><a href="product.html">鼠标垫</a></li>
+                            <li><a href="product.html">护目镜</a></li>
+                            <!--<li role="separator" class="divider"></li>-->
+                            <li><a href="product.html">附件</a></li>
+                            <li><a href="product.html">其他</a></li>
                         </ul>
                     </li>
                     <li><a href="javascript:">支持</a></li>
@@ -118,40 +113,16 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <a href="javascript:"><img src="images/poster1.jpg" class="img-responsive center-block" width="1920"
-                                               height="500" alt="Responsive image"></a>
-                    <!--<div class="carousel-caption">
-                        <h2>Sed porttitor lectus nibh.</h2>
-                        <p>
-                            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Nulla porttitor accumsan tincidunt. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Pellentesque in ipsum id orci porta dapibus. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Proin eget tortor risus. Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
-                    </div>-->
+                    <a href="javascript:"><img src="images/poster1.jpg" class="img-responsive center-block" width="1920" height="500" alt="Responsive image"></a>
                 </div>
                 <div class="item">
-                    <img src="images/poster2.jpg" class="img-responsive center-block" width="1920" height="500"
-                         alt="Responsive image">
-                    <!--<div class="carousel-caption">
-                        <h2>Vivamus magna justo, lacinia eget consectetur. </h2>
-                        <p>
-                            Quisque velit nisi, pretium ut lacinia in, elementum id enim. Proin eget tortor risus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla quis lorem ut libero malesuada feugiat. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Proin eget tortor risus. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Cras ultricies ligula sed magna dictum porta. Cras ultricies ligula sed magna dictum porta.</p>
-                    </div>-->
+                    <img src="images/poster2.jpg" class="img-responsive center-block" width="1920" height="500" alt="Responsive image">
                 </div>
                 <div class="item">
-                    <img src="images/poster3.jpg" class="img-responsive center-block" width="1920" height="500"
-                         alt="Responsive image">
-                    <!--<div class="carousel-caption">
-                        <h2>Donec sollicitudin molestie malesuada.</h2>
-                        <p>
-                            Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Nulla quis lorem ut libero malesuada feugiat. Nulla quis lorem ut libero malesuada feugiat. Donec rutrum congue leo eget malesuada. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
-                    </div>-->
+                    <img src="images/poster3.jpg" class="img-responsive center-block" width="1920" height="500" alt="Responsive image">
                 </div>
                 <div class="item">
-                    <img src="images/poster4.jpg" class="img-responsive center-block" width="1920" height="500"
-                         alt="Responsive image">
-                    <!--<div class="carousel-caption">
-                        <h2>Lorem ipsum dolor sit amet</h2>
-                        <p>
-                            Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Donec sollicitudin molestie malesuada. Vivamus suscipit tortor eget felis porttitor volutpat. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec rutrum congue leo eget malesuada.</p>
-                    </div>-->
+                    <img src="images/poster4.jpg" class="img-responsive center-block" width="1920" height="500" alt="Responsive image">
                 </div>
             </div>
 
@@ -305,10 +276,6 @@
 <!-- jQuery & Bootstrap -->
 <script src="//cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <script src="bootstrap/js/bootstrap.min.js"></script>
-
-<!-- Hammer -->
-<script src="//cdn.bootcss.com/hammer.js/1.0.10/jquery.hammer.min.js"></script>
-<script src="//cdn.bootcss.com/hammer.js/1.0.10/jquery.hammer.min.js"></script>
 
 <!-- Customized -->
 <script src="scripts/main.js"></script>
