其他页面 - init commit

--- a/product.html
+++ b/product.html
@@ -7,10 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Lorem, Ipsum, Quisque">
-    <meta name="description"
-          content="Lorem Ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor lectus nibh. Sed porttitor lectus nibh. Donec sollicitudin molestie malesuada. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.">
-    <meta name="author" content="">
-    <title>Lorem Ipsum | Quisque velit nisi, pretium ut lacinia in, elementum id enim.</title>
+    <meta name="description" content="INSIST, Professional Gaming Gear">
+    <meta name="author" content="kavalon">
+    <title>INSIST - 生而不凡</title>
 
     <!-- Bootstrap & Swiper -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -71,12 +70,12 @@
                     </div>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html">首页</a></li>
-                    <li class="dropdown">
+                    <li><a href="index.html">首页</a></li>
+                    <li class="dropdown active">
                         <a href="javascript:" class="dropdown-toggle" data-toggle="dropdown" role="button"
                            aria-haspopup="true" aria-expanded="false"><span class="layout-vam">产品 </span><span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="product.html">键盘</a></li>
+                            <li class="active"><a href="product.html">键盘</a></li>
                             <li><a href="product.html">鼠标</a></li>
                             <li><a href="product.html">鼠标垫</a></li>
                             <li><a href="product.html">护目镜</a></li>
@@ -85,10 +84,21 @@
                             <li><a href="product.html">其他</a></li>
                         </ul>
                     </li>
-                    <li><a href="javascript:">支持</a></li>
+                    <li class="dropdown">
+                        <a href="javascript:" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                           aria-haspopup="true" aria-expanded="false"><span class="layout-vam">支持 </span><span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li class="active"><a href="support-drive.html">产品驱动</a></li>
+                            <li><a href="FAQ.html">常见问题</a></li>
+                            <li><a href="auth.html">真伪查询</a></li>
+                            <!--<li role="separator" class="divider"></li>-->
+                            <li><a href="cs.html">客户服务</a></li>
+                            <li><a href="warranty.html">质保条款</a></li>
+                        </ul>
+                    </li>
                     <li><a href="javascript:">商城</a></li>
-                    <li><a href="javascript:">新闻媒体</a></li>
-                    <li><a href="javascript:">关于我们</a></li>
+                    <li><a href="news.html">新闻媒体</a></li>
+                    <li><a href="about.html">关于我们</a></li>
                     <li><a href="javascript:">INSIST 全球</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
@@ -104,11 +114,11 @@
     <div class="swiper-container gallery-product-category">
         <div class="swiper-wrapper">
             <a href="javascript:" class="swiper-slide" style="background-image:url(images/product_foot_slider1.png)"></a>
-            <a href="javascript:"  class="swiper-slide active" style="background-image:url(images/product_foot_slider3.png)"></a>
-            <a href="javascript:"  class="swiper-slide" style="background-image:url(images/product_foot_slider2.png)"></a>
-            <a href="javascript:"  class="swiper-slide" style="background-image:url(images/product_foot_slider1.png)"></a>
-            <a href="javascript:"  class="swiper-slide" style="background-image:url(images/product_foot_slider2.png)"></a>
-            <a href="javascript:"  class="swiper-slide" style="background-image:url(images/product_foot_slider3.png)"></a>
+            <a href="javascript:" class="swiper-slide active" style="background-image:url(images/product_foot_slider3.png)"></a>
+            <a href="javascript:" class="swiper-slide" style="background-image:url(images/product_foot_slider2.png)"></a>
+            <a href="javascript:" class="swiper-slide" style="background-image:url(images/product_foot_slider1.png)"></a>
+            <a href="javascript:" class="swiper-slide" style="background-image:url(images/product_foot_slider2.png)"></a>
+            <a href="javascript:" class="swiper-slide" style="background-image:url(images/product_foot_slider3.png)"></a>
         </div>
 
         <div class="swiper-button-next swiper-button-white"></div>
@@ -182,7 +192,7 @@
             <div class="col-md-8 text-left">
                 <div class="layout-mh10">
                     <span class="layout-pr10">BORN FOR GREATNESS™</span>
-                    <a class="layout-pr15" href="javascript:">关于iNSIST</a>
+                    <a class="layout-pr15" href="javascript:">关于INSIST</a>
                     <a class="layout-pr15" href="javascript:">联系我们</a>
                     <a class="layout-pr15" href="javascript:">发货与退货</a>
                     <a class="layout-pr15" href="javascript:">条款与条件</a>
@@ -198,7 +208,7 @@
 </footer>
 
 <!-- jQuery & Bootstrap & Swiper -->
-<script src="//cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<script src="http://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <script src="bootstrap/js/bootstrap.min.js"></script>
 <script src="bower_components/Swiper/dist/js/swiper.jquery.min.js"></script>
 
