移动端初步适配

--- a/index.html
+++ b/index.html
@@ -152,19 +152,19 @@
     <div class="container">
 
         <div class="row layout-pt15">
-            <div class="col-xs-6 col-md-4">
+            <div class="col-sm-12 col-md-4">
                 <a href="#" class="thumbnail">
-                    <img src="images/home-product1.jpg" width="400" height="200" alt="">
+                    <img src="images/home-product1.jpg" width="400" height="200" alt="" class="img-responsive">
                 </a>
             </div>
-            <div class="col-xs-6 col-md-4">
+            <div class="col-sm-12 col-md-4">
                 <a href="#" class="thumbnail">
-                    <img src="images/home-product2.jpg" width="400" height="200" alt="">
+                    <img src="images/home-product2.jpg" width="400" height="200" alt="" class="img-responsive">
                 </a>
             </div>
-            <div class="col-xs-6 col-md-4">
+            <div class="col-sm-12 col-md-4">
                 <a href="#" class="thumbnail">
-                    <img src="images/home-product3.jpg" width="400" height="200" alt="">
+                    <img src="images/home-product3.jpg" width="400" height="200" alt="" class="img-responsive">
                 </a>
             </div>
         </div>
@@ -181,7 +181,7 @@
                     </div>
                     <div class="bd">
                         <div class="layout-ph15">
-                            <img src="images/logo-h.png" width="520" alt="INSIST">
+                            <img src="images/logo-h.png" width="520" alt="INSIST" class="img-responsive">
                         </div>
                         <p style="line-height: 24px;text-indent: 2em;">INSIST 于 2005
                             年在德国成立，公司的总部位于德国汉堡，是全球专业电竞装备的领导品牌之一。</p>
@@ -191,13 +191,13 @@
                             INSIST为专业电竞而生，我们的使命是用我们的坚持不断强化选手的电竞装备，用我们的经验来改善电竞选手的健康状况，用我们的专业来成就电竞选手的巅峰状态。</p>
                         <div class="row layout-ph15">
                             <div class="col-md-4">
-                                <img src="images/home-about1.jpg" class="thumbnail img-responsive" alt="">
+                                <img src="images/home-about1.jpg" class="thumbnail img-responsive center-block" alt="">
                             </div>
                             <div class="col-md-4">
-                                <img src="images/home-about2.jpg" class="thumbnail img-responsive" alt="">
+                                <img src="images/home-about2.jpg" class="thumbnail img-responsive center-block" alt="">
                             </div>
                             <div class="col-md-4">
-                                <img src="images/home-about3.jpg" class="thumbnail img-responsive" alt="">
+                                <img src="images/home-about3.jpg" class="thumbnail img-responsive center-block" alt="">
                             </div>
                         </div>
                     </div>
