--- a/news.html
+++ b/news.html
@@ -110,7 +110,7 @@
 <!-- container -->
 <article class="global-container">
 
-    <div class="container" style="background: url(images/page-BG-news.jpg) top right no-repeat;">
+    <div class="container page-news" style="background: url(images/page-BG-news.jpg) top right no-repeat;">
 
         <h3 class="page-title">新闻媒体 | NEWS & MEDIA</h3>
 
