--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
                     <img src="images/about-main.jpg" alt="" class="img-responsive">
                 </p>
                 <div class="layout-ph15">
-                    <img src="images/logo-h.png" width="520" alt="INSIST">
+                    <img src="images/logo-h.png" width="520" alt="INSIST" class="img-responsive">
                 </div>
                 <p class="layout-pb10">
                     INSIST于2005年在德国成立，公司的总部位于德国汉堡，是全球专业电竞装备的领导品牌之一。
@@ -138,9 +138,9 @@
             </div>
             <div class="col-md-4">
 
-                <div class="layout-mb20"><img src="images/home-about1.jpg" class="thumbnail" alt=""></div>
-                <div class="layout-mb20"><img src="images/home-about2.jpg" class="thumbnail" alt=""></div>
-                <div class="layout-mb20"><img src="images/home-about3.jpg" class="thumbnail" alt=""></div>
+                <div class="layout-mb20"><img src="images/home-about1.jpg" class="thumbnail img-responsive center-block" alt=""></div>
+                <div class="layout-mb20"><img src="images/home-about2.jpg" class="thumbnail img-responsive center-block" alt=""></div>
+                <div class="layout-mb20"><img src="images/home-about3.jpg" class="thumbnail img-responsive center-block" alt=""></div>
 
                 <div class="box">
                     <div class="hd">
