--- a/auth.html
+++ b/auth.html
@@ -119,7 +119,7 @@
         <p class="layout-pb30">INSIST® 独一无二。使用正品INSIST® 游戏设备与粗制滥造的伪品之间的区别在于，是对您对所选游戏发号施令，
             还是因为武器射偏而战死沙场。请使用认证工具检查您的设备，以确保您购买的是正品。</p>
 
-        <div style="height: 263px;margin:20px;background: url(images/auth-tips.jpg) no-repeat top left;">
+        <div style="height: 263px;margin:20px;background: url(images/auth-tips.jpg) no-repeat top left;background-size: 100%;">
             <div class="row">
                 <div class="col-md-4">
                     <form action="" method="post" class="form-horizontal">
